--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -89,8 +89,8 @@ jobs:
       
       - name: Check if secrets are configured
         run: |
-          echo "🔍 Checking deployment configuration..."
-          echo "✅ Required secrets will be validated during deployment"
+          echo "Checking deployment configuration..."
+          echo "Required secrets will be validated during deployment"
       
       - name: Apply database migrations
         uses: cloudflare/wrangler-action@v3
@@ -122,7 +122,7 @@ jobs:
       
       - name: Post-deployment validation
         run: |
-          echo "🚀 Deployment completed successfully!"
+          echo "Deployment completed successfully!"
           echo "API URL: https://student-db-ms.smitharnold230.workers.dev"
           echo "Waiting 30 seconds for deployment to stabilize..."
           sleep 30
@@ -134,9 +134,9 @@ jobs:
             -d '{"email":"admin@example.com","password":"admin123"}' || echo "000")
           
           if [ "$response" = "200" ]; then
-            echo "✅ API is responding correctly"
+            echo "API is responding correctly"
           else
-            echo "⚠️ API response code: $response"
+            echo "API response code: $response"
             echo "The API might still be starting up"
           fi
 
@@ -152,23 +152,23 @@ jobs:
       
       - name: Check for common security issues
         run: |
-          echo "🔍 Checking for common security issues..."
+          echo "Checking for common security issues..."
           
           # Check for exposed secrets in code
           if grep -r "password.*=" src/ --include="*.ts" --include="*.js" | grep -v "password_hash" | grep -v "passwordHash"; then
-            echo "⚠️ Potential hardcoded passwords found"
+            echo "Potential hardcoded passwords found"
           else
-            echo "✅ No hardcoded passwords detected"
+            echo "No hardcoded passwords detected"
           fi
           
           # Check for TODO/FIXME security items
           if grep -r "TODO.*security\|FIXME.*security\|TODO.*auth\|FIXME.*auth" src/ --include="*.ts" --include="*.js"; then
-            echo "⚠️ Security-related TODOs found"
+            echo "Security-related TODOs found"
           else
-            echo "✅ No security TODOs found"
+            echo "No security TODOs found"
           fi
           
-          echo "🔒 Security scan completed"
+          echo "Security scan completed"
 
   notify-success:
     runs-on: ubuntu-latest
@@ -178,11 +178,11 @@ jobs:
     steps:
       - name: Success notification
         run: |
-          echo "🎉 SDMS Deployment Successful!"
-          echo "✅ All checks passed"
-          echo "✅ Security scan completed"
-          echo "✅ Production deployment successful"
+          echo "SDMS Deployment Successful!"
+          echo "All checks passed"
+          echo "Security scan completed"
+          echo "Production deployment successful"
           echo ""
-          echo "🌐 Application URL: https://student-db-ms.smitharnold230.workers.dev"
-          echo "📊 API Success Rate: 100%"
-          echo "🚀 Ready for production use!"
+          echo "Application URL: https://student-db-ms.smitharnold230.workers.dev"
+          echo "API Success Rate: 100%"
+          echo "Ready for production use!"
